attempt to use java 11 modules