@@ -7,16 +7,18 @@ import java.time.format.DateTimeFormatter
 
 buildscript {
     ext {
-        springBootVersion = '2.0.1.RELEASE'
+        springBootVersion = '2.1.0.BUILD-SNAPSHOT'
     }
 
     repositories {
         jcenter()
+        maven { url 'https://repo.spring.io/snapshot' }
     }
 
     dependencies {
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
     }
 }
 
@@ -30,9 +32,13 @@ plugins {
 
 apply plugin: 'base'
 apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
 apply plugin: "io.spring.dependency-management"
 apply plugin: 'jacoco'
+apply plugin: 'com.google.osdetector'
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 ZoltuGitVersioning {
     customDescribeProcessor { describeResults ->
@@ -61,6 +67,7 @@ ext {
     ]
 
     isOsLinux = System.getProperty('os.name').toLowerCase().contains('linux')
+    platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
     dockerComposeCacheDir = "$rootDir/.gradle/docker-compose"
     dockerComposeScript = isOsLinux ? "$dockerComposeCacheDir/$dockerComposeVersion/docker-compose.sh"
@@ -69,15 +76,20 @@ ext {
             dockerComposeScript : 'docker-compose'
 
     composeProperties = [
-            'version'              : project.version,
+            'version': project.version,
     ]
 
-    jsr305Version="3.0.1"
-    lombokVersion="1.18.2"
+    jsr305Version = "3.0.1"
+    lombokVersion = "edge-SNAPSHOT"
+    javaFxVersion = "11"
+    moduleName = 'com.github.kindrat.cassadra.client'
+    javaHome = System.getProperty("java.home")
 }
 
 repositories {
     jcenter()
+    maven { url 'https://projectlombok.org/edge-releases' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencyManagement {
@@ -87,7 +99,7 @@ dependencyManagement {
         }
     }
     dependencies {
-        dependency("org.apache.commons:commons-lang3:3.5")
+        dependency("org.apache.commons:commons-lang3:3.8.1")
         dependency("io.projectreactor:reactor-core:3.0.7.RELEASE")
         dependency("io.projectreactor.addons:reactor-test:3.0.6.RELEASE")
 
@@ -100,19 +112,22 @@ dependencyManagement {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
-    compile files("lib/jfxrt.jar")
+    compile("org.openjfx:javafx-base:$javaFxVersion:$platform")
+    compile("org.openjfx:javafx-controls:$javaFxVersion:$platform")
+    compile("org.openjfx:javafx-graphics:$javaFxVersion:$platform")
+    compile("org.openjfx:javafx-fxml:$javaFxVersion:$platform")
     compile("com.google.guava:guava")
     compile("com.github.nginate:commons-lang:1.0.0")
     compile("com.fasterxml.jackson.core:jackson-databind")
     compile("org.hibernate:hibernate-core")
 
-    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    compileOnly("org.projectlombok:lombok:$lombokVersion")
-    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
+    compile("org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:2.0.0.Alpha1")
+
+    runtime("org.springframework.boot:spring-boot-properties-migrator")
 
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
-
-    compileOnly("com.google.code.findbugs:jsr305:$jsr305Version")
+    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    implementation("org.projectlombok:lombok:$lombokVersion")
 
     compile("com.datastax.cassandra:cassandra-driver-core:3.1.3")
     compile("org.springframework.data:spring-data-cassandra") {
@@ -124,36 +139,70 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-data-cassandra")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.testng:testng:6.14.3")
-    testCompileOnly("com.google.code.findbugs:jsr305:$jsr305Version")
 }
 
 scmVersion {
     versionIncrementer 'incrementMinorIfNotOnRelease', [releaseBranchPattern: 'release-.*']
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+wrapper {
+    gradleVersion = '4.10.1'
     distributionType = "all"
 }
 
-bootRun {
+run {
     systemProperties System.properties
+    mainClassName = 'com.github.kindrat.cassandra.client.CassandraClientGUI'
+
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml,spring.boot'
+        ]
+    }
 }
 
 jar {
-    enabled = true
+    inputs.property("moduleName", moduleName)
+    manifest {
+        attributes('Automatic-Module-Name': moduleName)
+        attributes('Main-Class': 'com.github.kindrat.cassandra.client.CassandraClientGUI')
+    }
 }
 
-bootJar {
-    mainClassName = 'com.github.kindrat.cassandra.client.CassandraClientGUI'
-    // this is here to enable incremental build
-    classifier = 'exec'
+compileJava {
+    inputs.property("moduleName", moduleName)
+
+    options.encoding = 'UTF-8'
+
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'spring.boot',
+                "-Xlint:unchecked",
+                "-Xlint:deprecation"
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
 }
 
 task downloadDockerCompose(type: Download) {
     def composeVersion = project.findProperty('dockerComposeVersion')
     def composeSrc = isOsLinux ? "https://github.com/docker/compose/releases/download/$composeVersion/docker-compose-linux-x86_64"
-        : "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-Windows-x86_64.exe"
+            : "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-Windows-x86_64.exe"
     inputs.property('composeVersion', composeVersion)
 
     overwrite false
@@ -224,7 +273,13 @@ task codeCoverageReport(type: JacocoReport) {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 tasks.withType(Test) {
+    inputs.property("moduleName", moduleName)
+
     useTestNG()
     testLogging {
         exceptionFormat = TestExceptionFormat.FULL
@@ -239,6 +294,28 @@ tasks.withType(Test) {
     if (Os.isFamily(Os.FAMILY_MAC)) {
         systemProperty 'java.io.tmpdir', "/tmp"
     }
+
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+task link(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+
+    workingDir 'build'
+
+    commandLine "${ javaHome}${File.separatorChar}bin${File.separatorChar}jlink", '--module-path', "libs${File.pathSeparatorChar}${javaHome}${File.separatorChar}jmods",
+            '--add-modules', "$moduleName", '--launcher', 'cassadra.client=com.github.kindrat.cassadra.client/com.github.kindrat.cassadra.client.CassandraClientGUI', 
+            '--output', 'dist', '--strip-debug',
+            '--compress', '2', '--no-header-files', '--no-man-pages'
 }
 
 migratorDropKeyspace.dependsOn envComposeUp
